# CPPLessons

./: CMakeLists.txt  CMakePresets.json  Yazılım Geliştirme Araçları Hakkında Detaylı Bilgi.md  vcpkg.json
src/: main.cpp  utilities.ixx
